fixed predictions for RF

--- a/notebooks/random_forest.ipynb
+++ b/notebooks/random_forest.ipynb
@@ -243,41 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "def predict_user_role(user_vector, model=rf):\n",
-    "    # convert to numpy array for safety\n",
-    "    user_vector = np.array(user_vector).reshape(1, -1)\n",
-    "\n",
-    "    # predict class\n",
-    "    pred_class = model.predict(user_vector)[0]\n",
-    "    print(pred_class)\n",
-    "    # map back to job title\n",
-    "    return class_to_title[pred_class]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def top_k_roles(user_vector, k=3, model=rf):\n",
-    "    user_vector = np.array(user_vector).reshape(1, -1)\n",
-    "    probs = model.predict_proba(user_vector)[0]\n",
-    "\n",
-    "    top_idx = probs.argsort()[::-1][:k]\n",
-    "    top_roles = [(class_to_title[i], probs[i]) for i in top_idx]\n",
-    "\n",
-    "    return top_roles\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,51 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aws\n",
-      "firewalls\n",
-      "java\n",
-      "network analysis\n",
-      "python\n",
-      "r\n",
-      "sql\n",
-      "vpn\n",
-      "vulnerability management\n",
-      "vulnerability scanner\n"
-     ]
-    }
-   ],
-   "source": [
-    "def encode_user_skills(user_skills, all_skills):\n",
-    "    vec = np.zeros(len(all_skills))\n",
-    "    for skill in user_skills:\n",
-    "        if skill in all_skills:\n",
-    "            print(skill)\n",
-    "            vec[all_skills.index(skill)] = 1\n",
-    "    return vec\n",
-    "    \n",
-    "user_skills=split_normalize_and_canonicalize(skills)\n",
-    "\n",
-    "all_skills = skills_df.columns.tolist()\n",
-    "user_vector = encode_user_skills(user_skills, all_skills).reshape(1, -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
       "PREDICTED ROLE: software engineer\n"
      ]
     },
@@ -392,12 +320,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>mobile engineer</td>\n",
+       "      <td>data analyst</td>\n",
        "      <td>21.33%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>business intelligence analyst</td>\n",
+       "      <td>security analyst</td>\n",
        "      <td>14.67%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -405,10 +333,10 @@
        "</div>"
       ],
       "text/plain": [
-       "                            Role Match Score\n",
-       "0              software engineer      27.67%\n",
-       "1                mobile engineer      21.33%\n",
-       "2  business intelligence analyst      14.67%"
+       "                Role Match Score\n",
+       "0  software engineer      27.67%\n",
+       "1       data analyst      21.33%\n",
+       "2   security analyst      14.67%"
       ]
      },
      "metadata": {},
@@ -416,21 +344,50 @@
     }
    ],
    "source": [
-    "skills=temp\n",
-    "k=3\n",
-    "user_skills=split_normalize_and_canonicalize(skills)\n",
-    "all_skills = skills_df.columns.tolist()\n",
-    "predicted_role = predict_user_role(user_vector)\n",
-    "print(\"PREDICTED ROLE:\", predicted_role)\n",
-    "top_roles = top_k_roles(user_vector, k)\n",
-    "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "def predict_user_role(user_vector, model):\n",
+    "    # ensure shape: (1, n_features)\n",
+    "    user_vector = np.asarray(user_vector).reshape(1, -1)\n",
+    "    pred_label = model.predict(user_vector)[0]            # actual class label\n",
+    "    return class_to_title[pred_label]\n",
+    "\n",
+    "def top_k_roles(user_vector, k, model):\n",
+    "    user_vector = np.asarray(user_vector).reshape(1, -1)\n",
+    "    probs = model.predict_proba(user_vector)[0]           # shape (n_classes,)\n",
+    "    # get indices of top k probabilities\n",
+    "    top_idx = probs.argsort()[::-1][:k]\n",
+    "    # map indices -> actual class labels, then to titles\n",
+    "    top_labels = model.classes_[top_idx]                  # array of class labels\n",
+    "    top_roles = [(class_to_title[label], probs[idx]) for idx, label in zip(top_idx, top_labels)]\n",
+    "    return top_roles\n",
+    "\n",
+    "def encode_user_skills(user_skills, all_skills):\n",
+    "    vec = np.zeros(len(all_skills), dtype=int)\n",
+    "    skill_to_index = {s: i for i, s in enumerate(all_skills)}\n",
+    "    for skill in user_skills:\n",
+    "        if skill in skill_to_index:\n",
+    "            vec[skill_to_index[skill]] = 1\n",
+    "    return vec\n",
+    "\n",
+    "# ---------- usage (example) ----------\n",
+    "# make sure all variables are set before making the vector\n",
+    "user_skills = split_normalize_and_canonicalize(skills)   # user-provided skills (string list)\n",
+    "all_skills = skills_df.columns.tolist()                  # feature list used by the model\n",
+    "\n",
+    "# always (re)create the vector *after* you set/modify skills or all_skills\n",
+    "user_vector = encode_user_skills(user_skills, all_skills).reshape(1, -1)\n",
+    "\n",
+    "predicted_role = predict_user_role(user_vector, model=rf)\n",
+    "print(\"PREDICTED ROLE:\", predicted_role)\n",
+    "\n",
+    "k = 3\n",
+    "top_roles = top_k_roles(user_vector, k=k, model=rf)\n",
     "\n",
     "df_top_roles = pd.DataFrame(top_roles, columns=[\"Role\", \"Match Score\"])\n",
     "df_top_roles[\"Match Score\"] = df_top_roles[\"Match Score\"].apply(lambda x: f\"{x:.2%}\")\n",
-    "\n",
-    "display(df_top_roles)\n",
-    "\n"
+    "display(df_top_roles)\n"
    ]
   },
   {
